--- a/auction/angular.json
+++ b/auction/angular.json
@@ -25,10 +25,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-              "../node_modules/jquery/dist/jquery.js",
-              "../node_modules/boostrap/dist/js/bootstrap.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -75,12 +72,11 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
-              "../node_modules/jquery/dist/jquery.js",
-              
-
+              "../node_modules/bootstrap/dist/js/bootstrap.js"
             ],
             "assets": [
               "src/favicon.ico",
