--- a/auction/angular.json
+++ b/auction/angular.json
@@ -76,7 +76,8 @@
               "../node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
-              "../node_modules/bootstrap/dist/js/bootstrap.js"
+              "../node_modules/bootstrap/dist/js/bootstrap.js",
+              "../node_modules/jquery/dist/jquery.js/"
             ],
             "assets": [
               "src/favicon.ico",
